--- a/proyecto 2.html
+++ b/proyecto 2.html
@@ -1,15 +1,15 @@
 
 <div class="wrapper">
   <form class="login">
-    <p class="title">Log in</p>
-    <input type="text" placeholder="Username" autofocus/>
+    <p class="title">Ingrese nombre de usuario y contraseña</p>
+    <input type="text" placeholder="Nombre de usuario" autofocus/>
     <i class="fa fa-user"></i>
-    <input type="password" placeholder="Password" />
+    <input type="password" placeholder="Contraseña" />
     <i class="fa fa-key"></i>
-    <a href="#">Forgot your password?</a>
+    <a href="#">Olvido su contraseña?</a>
     <button>
       <i class="spinner"></i>
-      <span class="state">Log in</span>
+      <span class="state">Entrar</span>
     </button>
   </form>
   </p>
